Fixed center alignment of elements

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,38 @@
-.navbar-default {
-  background-color: #000;
-}
-
 body, html {
   height: 100%;
   color: #fff;
   text-align: center;
+}
+
+#home img {
+  width: 35%;
+  /*padding-top: 25%;*/
+  max-width: 250px;
+}
+
+#about {
+  background-color: #ccc;
+  min-height: 50vh;
+}
+
+#about .col-xs-12 {
+  text-align: justify;
+  vertical-align: middle;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 10%;
+}
+
+#contact {
+  min-height: 100vh;
+  background-color: #ccc;
+}
+
+.navbar-default {
+  background-color: #000;
+  border: none;
 }
 
 .parallax1, .parallax2 {
@@ -28,26 +55,6 @@ body, html {
 .vertical-align {
     display: flex;
     align-items: center;
-}
-
-#home img {
-  width: 35%;
-  /*padding-top: 25%;*/
-  max-width: 250px;
-}
-
-#about {
-  background-color: #ccc;
-  min-height: 50vh;
-}
-
-#about p {
-  text-align: justify;
-}
-
-#contact {
-  min-height: 100vh;
-  background-color: #ccc;
 }
 
 /* Turn off parallax scrolling for tablets and phones */
